--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  background-color: #f0f6ff;
+  background-color: #00274D;
   display: flex;
   width: 100%;
   height: 100vh;
